Refactor entities and repositories for enhanced validation, precision, and readability. Introduce Flyway migration, testcontainers integration, and test data initialization for transaction repository tests.